Envio de repositorio, nao verificado